# Lost-Animal-Platform

./: .gitlab-ci.yml  API_DOCS.md  README.md
ansible/: README.md  ansible_vm_setup.sh  build_and_send.sh  database-setup.yaml  database-update.yaml  generate_env.sh  libretranslate-setup.yaml  update_vms.sh  webserver-download.yaml  webserver-setup.yaml  webserver-update.yaml
ansible/apache/: frontend.conf.j2  nginx.conf.j2
ansible/sql_scripts/: README.md  breeds.sql  data.sql  droptables.sql  tables.sql  triggers.sql
meeting notes/: 2024-02-08.txt  2024-02-10.txt  2024-02-13.txt  2024-02-17.txt  2024-02-20.txt  2024-02-27.txt  2024-03-02.txt  2024-03-09.txt
src/backend/: .gitignore  README.md  pom.xml
src/backend/src/main/resources/: logback-spring.xml
src/frontend/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  tailwind.config.js
src/frontend/src/: index.html  styles.css
src/frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
src/frontend/src/app/directives/: clickedOutside.directive.spec.ts  (+1 more)
src/frontend/src/assets/: breedConverter.sh  cat-breeds.ts  dog-breeds.ts  other-breeds.ts  reportData.json
src/frontend/src/environment/: environment.ts
src/frontend/src/locale/: messages.lt.xlf  messages.xlf
src/libretranslate/: README.md  libretranslate.service  setup.sh
src/python-backend/: .gitignore  README.md  pyproject.toml
src/python-backend/straysafe/: __init__.py  app.py  db.py  histograms.py  routes.py  run.py
src/python-backend/tests/: test_app.py
(+263 files in other folders)
